# lp-jira-sync

./: README.rst  requirements.txt  setup.cfg
lp_jira_sync/: cli.py  ji.py  lp.py
