[metadata]
name = lp_jira_sync
summary = Launchpad JIRA sync tool
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    lp_jira_sync

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    lp-jira-sync = lp_jira_sync.cli:main

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True
warnerrors = True
